Fix overflow issues

--- a/ui/src/css/doc.css
+++ b/ui/src/css/doc.css
@@ -992,3 +992,7 @@
   text-align: right;
   width: 1.5em;
 }
+
+.stemblock{
+  overflow-x: auto;
+}
