--- a/ui/src/css/extensions/custom.css
+++ b/ui/src/css/extensions/custom.css
@@ -100,7 +100,7 @@
   }
 
   .navbar {
-    padding: 2em 2em 2em 1.5em;
+    padding: 2rem;
     z-index: 11;
   }
 
@@ -369,7 +369,7 @@
 }
 
 footer .footerdiv {
-  padding: 1rem;
+  padding: 1rem 2rem;
   display: flex;
   flex: auto;
   justify-content: space-between;
